// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurvedArrow renders with default values 1`] = `
<body>
  <div>
    <path
      d="M 0.8333333333333334,0 A 0.8333333333333334,0.8333333333333334 0 0 0 0.8333333333333334,0 L 0.5,0 L 0.9998476951563913,0.01745240643728351 L 1.5,0 L 1.1666666666666667,0 A 1.1666666666666667,1.1666666666666667 0 0 0 1.1666666666666667,0 Z"
    />
  </div>
</body>
`;

exports[`CurvedArrow renders with the given parameters 1`] = `
<body>
  <div>
    <path
      d="M 118.75,182.47595264191645 A 37.5,37.5 0 0 0 118.75,182.47595264191645 L 112.5,171.65063509461098 L 100,200 L 137.5,214.9519052838329 L 131.25,204.12658773652743 A 62.5,62.5 0 0 0 131.25,204.12658773652743 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter angle is modified 1`] = `
<body>
  <div>
    <path
      d="M 118.75,182.47595264191645 A 37.5,37.5 0 0 1 86.07199634467996,184.81753457925174 L 90.71466422978665,173.21168971950118 L 56.69872981077806,175 L 72.14399268935993,219.6350691585035 L 76.78666057446661,208.02922429875292 A 62.5,62.5 0 0 0 131.25,204.12658773652743 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter clockwise is modified 1`] = `
<body>
  <div>
    <path
      d="M 125,193.30127018922192 L 100,225 L 100,212.5 A 62.5,62.5 0 0 0 100,212.5 L 100,187.5 A 37.5,37.5 0 0 0 100,187.5 L 100,175 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter cx is modified 1`] = `
<body>
  <div>
    <path
      d="M 58.75,182.47595264191645 A 37.5,37.5 0 0 0 58.75,182.47595264191645 L 52.5,171.65063509461098 L 40,200 L 77.5,214.9519052838329 L 71.25,204.12658773652743 A 62.5,62.5 0 0 0 71.25,204.12658773652743 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter cy is modified 1`] = `
<body>
  <div>
    <path
      d="M 118.75,72.47595264191645 A 37.5,37.5 0 0 0 118.75,72.47595264191645 L 112.5,61.65063509461096 L 100,90 L 137.5,104.9519052838329 L 131.25,94.12658773652741 A 62.5,62.5 0 0 0 131.25,94.12658773652741 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter fill is modified 1`] = `
<body>
  <div>
    <path
      d="M 118.75,182.47595264191645 A 37.5,37.5 0 0 0 118.75,182.47595264191645 L 112.5,171.65063509461098 L 100,200 L 137.5,214.9519052838329 L 131.25,204.12658773652743 A 62.5,62.5 0 0 0 131.25,204.12658773652743 Z"
      fill="blue"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter radius is modified 1`] = `
<body>
  <div>
    <path
      d="M 123.75,191.13620667976085 A 47.5,47.5 0 0 0 123.75,191.13620667976085 L 117.5,180.31088913245534 L 100,210 L 142.5,223.61215932167727 L 136.25,212.7868417743718 A 72.5,72.5 0 0 0 136.25,212.7868417743718 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter rotation is modified 1`] = `
<body>
  <div>
    <path
      d="M 100,187.5 A 37.5,37.5 0 0 0 100,187.5 L 100,175 L 75.00000000000001,193.30127018922195 L 100,225 L 100,212.5 A 62.5,62.5 0 0 0 100,212.5 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter stroke is modified 1`] = `
<body>
  <div>
    <path
      d="M 118.75,182.47595264191645 A 37.5,37.5 0 0 0 118.75,182.47595264191645 L 112.5,171.65063509461098 L 100,200 L 137.5,214.9519052838329 L 131.25,204.12658773652743 A 62.5,62.5 0 0 0 131.25,204.12658773652743 Z"
      fill="red"
      stroke="blue"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter stroke-width is modified 1`] = `
<body>
  <div>
    <path
      d="M 118.75,182.47595264191645 A 37.5,37.5 0 0 0 118.75,182.47595264191645 L 112.5,171.65063509461098 L 100,200 L 137.5,214.9519052838329 L 131.25,204.12658773652743 A 62.5,62.5 0 0 0 131.25,204.12658773652743 Z"
      fill="red"
      stroke-width="3"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter thickness is modified 1`] = `
<body>
  <div>
    <path
      d="M 112.5,171.65063509461098 A 25,25 0 0 0 112.5,171.65063509461098 L 100,200 L 137.5,214.9519052838329 A 75,75 0 0 0 137.5,214.9519052838329 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter transform is modified 1`] = `
<body>
  <div>
    <path
      d="M 118.75,182.47595264191645 A 37.5,37.5 0 0 0 118.75,182.47595264191645 L 112.5,171.65063509461098 L 100,200 L 137.5,214.9519052838329 L 131.25,204.12658773652743 A 62.5,62.5 0 0 0 131.25,204.12658773652743 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(180)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter width is modified 1`] = `
<body>
  <div>
    <path
      d="M 118.75,182.47595264191645 A 37.5,37.5 0 0 0 118.75,182.47595264191645 L 112.5,171.65063509461098 L 100,200 L 137.5,214.9519052838329 L 131.25,204.12658773652743 A 62.5,62.5 0 0 0 131.25,204.12658773652743 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;
